# ROS-2-Lab

./: LICENSE  README.md
ros2_ws/src/custom_msg_pkg/: CMakeLists.txt  package.xml
ros2_ws/src/custom_msg_pkg/msg/: TextStamped.msg
ros2_ws/src/text_publisher/: package.xml  setup.cfg  setup.py
ros2_ws/src/text_publisher/text_publisher/: publisher.py
ros2_ws/src/text_subscriber/: CMakeLists.txt  package.xml
ros2_ws/src/text_subscriber/src/: subscriber.cpp
